# Tetris

./: CMakeLists.txt  README.md  lastPopulation (copy).txt  lastPopulation.txt  main  main (copy).cpp  main.cpp
Config/: config.h  constants.h  geneticAlgorithmConfig.h
headers/: AI.h  Piece.h  config.h  constants.h  functions.h  geneticAlgorithm.h  geneticAlgorithmConfig.h  myQueue.h  tetrisFunctions.h
libraries/: AI.cpp  Piece.cpp  functions.cpp  geneticAlgorithm.cpp  myQueue.cpp  tetrisFunctions.cpp
libraries/AI/: AI.cpp  AI.h
libraries/Error/: error.cpp  error.h
libraries/Functions/: functions.cpp  functions.h
libraries/GeneticAlgorithm/: geneticAlgorithm.cpp  geneticAlgorithm.h
libraries/Matrix/: matrix.cpp  matrix.h
libraries/MyQueue/: myQueue.cpp  myQueue.h
libraries/Piece/: Piece.cpp  Piece.h
libraries/TetrisFunctions/: tetrisFunctions.cpp  tetrisFunctions.h
